--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 DATABASE_URL="postgresql://postgres:secret@localhost:5432/postgres"
-JWT_SECRET=
-MAPS_API=
+JWT_SECRET=hello
+MAPS_API=AIzaSyAqj8Hi5CpF2uQ4S6qlseHctRMWqoT11gc
